force-app/main/default/objects/EYI_Joint_Business_Plan__c/EYI_Joint_Business_Plan__c.object-meta.xml
<CustomObject>
    <label>Joint Business Plan</label>
    <nameField>
        <displayFormat>JBP-{0000}</displayFormat>
        <label>Joint Business Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>