force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>TL Approved</fullName>
            </value>
            <value>
                <fullName>TL Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Head Approved</fullName>
            </value>
            <value>
                <fullName>Head Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>