force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EY_End_User__c.field-meta.xml
<CustomField>
    <fullName>EY_End_User__c</fullName>
    <label>End User</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Served in Indian defense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>