force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>