force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Activity_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>EYI_Activity_Support_Required__c</fullName>
    <label>Activity Support Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>