force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Activity_type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Activity_type__c</fullName>
    <label>Activity type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tele calling</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>Microsite of broker</fullName>
            </value>
            <value>
                <fullName>Property portal</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Events and exhibitions</fullName>
            </value>
            <value>
                <fullName>Digital Campaigns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>