force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Association__c.field-meta.xml
<CustomField>
    <fullName>EYI_Association__c</fullName>
    <label>Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>