force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Club__c.field-meta.xml
<CustomField>
    <fullName>EYI_Club__c</fullName>
    <label>Club</label>
    <length>255</length>
    <type>Text</type>
</CustomField>