force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Community__c.field-meta.xml
<CustomField>
    <fullName>EYI_Community__c</fullName>
    <label>Community</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bori</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Goan Christian</fullName>
            </value>
            <value>
                <fullName>Goan Hindu</fullName>
            </value>
            <value>
                <fullName>Kashmiri</fullName>
            </value>
            <value>
                <fullName>Maharashtrian</fullName>
            </value>
            <value>
                <fullName>Marwari/Jain</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>North Indian Hindu</fullName>
            </value>
            <value>
                <fullName>Odia</fullName>
            </value>
            <value>
                <fullName>Parsi</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Sindhi</fullName>
            </value>
            <value>
                <fullName>South Indian Hindu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>