force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Corporate_Private_organisation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Corporate_Private_organisation__c</fullName>
    <label>Corporate (Private Organization)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>