force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Cost__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>