force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>