force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Government_Org__c.field-meta.xml
<CustomField>
    <fullName>EYI_Government_Org__c</fullName>
    <label>Government Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>