force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Inroad_Expected_Reach__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inroad_Expected_Reach__c</fullName>
    <label>Inroad Expected Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>