force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Investor__c.field-meta.xml
<CustomField>
    <fullName>EYI_Investor__c</fullName>
    <label>Investor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>