force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_JBP_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_JBP_Name__c</fullName>
    <label>JBP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>