force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Lead_generated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_generated__c</fullName>
    <label>Lead generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>