force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_NRI_Data__c.field-meta.xml
<CustomField>
    <fullName>EYI_NRI_Data__c</fullName>
    <label>NRI Data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>