force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Others__c.field-meta.xml
<CustomField>
    <fullName>EYI_Others__c</fullName>
    <label>Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>