force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Joint Business Plans</relationshipLabel>
    <relationshipName>Joint_Business_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>