force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Project_REC_Mapping__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_REC_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project REC Mapping</label>
    <referenceTo>EYI_Project_REC_Mapping__c</referenceTo>
    <relationshipLabel>Joint Business Plans</relationshipLabel>
    <relationshipName>Joint_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>