force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_PSU__c.field-meta.xml
<CustomField>
    <fullName>EYI_PSU__c</fullName>
    <label>PSU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>