force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_REC_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Interest_Level__c</fullName>
    <label>REC Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested to Work Immediately</fullName>
            </value>
            <value>
                <fullName>Interested to Work After CP Meet</fullName>
            </value>
            <value>
                <fullName>Not Interested to Work</fullName>
                <isActive>false</isActive>
                <label>Not Interested to Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>