force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Relevant_Database__c.field-meta.xml
<CustomField>
    <fullName>EYI_Relevant_Database__c</fullName>
    <label>Relevant Database</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>