force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Religious_Place_ex_iscon__c.field-meta.xml
<CustomField>
    <fullName>EYI_Religious_Place_ex_iscon__c</fullName>
    <label>Religious Place (Ex. ISCON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>