force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_SM_Rating__c.field-meta.xml
<CustomField>
    <fullName>EYI_SM_Rating__c</fullName>
    <label>SM Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>