force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Society__c.field-meta.xml
<CustomField>
    <fullName>EYI_Society__c</fullName>
    <label>Society</label>
    <length>255</length>
    <type>Text</type>
</CustomField>