force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>