force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_Type_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>EYI_Type_of_Resources__c</fullName>
    <label>Type of Resources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Inroads</fullName>
            </value>
            <value>
                <fullName>Digital Traffic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>