force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/EYI_VC_VP_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_VC_VP_Count__c</fullName>
    <label>VC/VP Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>