force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/REC_Account__c.field-meta.xml
<CustomField>
    <fullName>REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Joint Business Plans</relationshipLabel>
    <relationshipName>Joint_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>