force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/Sourcing_Head__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Joint_Business_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>