force-app/main/default/objects/EYI_Joint_Business_Plan__c/fields/Sourcing_Sales_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Sales_CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Sales &amp; CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Joint_Business_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>