force-app/main/default/objects/EYI_Joint_Business_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_JBP_Name__c</columns>
    <columns>EYI_Activity_type__c</columns>
    <columns>EYI_Activity_Status__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Activity_Support_Required__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>EYI_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>